# ConwayGPU

./: CMakeLists.txt  Game.cpp  Game.h  OpenClBlackbox.cpp  OpenClBlackbox.h  README.md  life.cl  main.cpp
